2003-10-22	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove RTEMS_CANONICAL_HOST.

2003-10-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove RTEMS_CHECK_CPU.

2003-09-04	Joel Sherrill <joel@OARcorp.com>

	* clock/ckinit.c, timer/timer.c: URL for license changed.

2003-08-18	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Reflect having moved aclocal/.

2003-08-16	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Reflect having moved automake/.
	* clock/Makefile.am: Reflect having moved automake/.
	* timer/Makefile.am: Reflect having moved automake/.

2003-08-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Use rtems-bugs@rtems.com as bug report email address.

2003-03-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove AC_CONFIG_AUX_DIR.

2003-02-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: AM_INIT_AUTOMAKE([1.7.2]).

2003-02-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: AC_PREREQ(2.57).

2003-01-15	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* clock/Makefile.am: Don't include @RTEMS_BSP@.cfg.
	* timer/Makefile.am: Ditto.

2002-12-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove RTEMS_CHECK_BSP_CACHE.

2002-12-01	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Add RTEMS_PROG_CCAS.

2002-10-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* .cvsignore: Reformat.
	Add autom4te*cache.
	Remove autom4te.cache.

2002-08-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* clock/Makefile.am: Use .$(OBJEXT) instead of .o.
 	* timer/Makefile.am: Use .$(OBJEXT) instead of .o.

2002-03-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac:
	AC_INIT(package,_RTEMS_VERSION,_RTEMS_BUGS).
	AM_INIT_AUTOMAKE([no-define foreign 1.6]).
	* clock/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* Makefile.am: Remove AUTOMAKE_OPTIONS.
	* timer/Makefile.am: Remove AUTOMAKE_OPTIONS.

2001-10-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
